@@ -1,3 +1,9 @@
+2003-10-07  Per Bothner  <per@bothner.com>
+
+	* BooleanValue.java (booleanValue):  Change to match spec better.
+
+	* IntegerRange.java (integerRange):  Fix bugs.  Make static.
+
 2003-09-24  Per Bothner  <per@bothner.com>
 
 	* MakeAttribute.java:  Now extends gnu.kawa.xml.NodeConstructor.
